SERVER-51049 Cannot assume recovery timestamp can be found in oplog